fix overflow for body

--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@
 html, body {
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  overflow-x: hidden;
   min-height: 100vh;
 }
 
